# immich-albums

./: .pre-commit-config.yaml  LICENSE.txt  README.md  im.py  pyproject.toml
openapi_client/: README.md  api_client.py  configuration.py  exceptions.py  pyproject.toml  rest.py  setup.py
openapi_client/.openapi-generator/: FILES
openapi_client/api/: __init__.py  audit_api.py  o_auth_api.py  search_api.py  server_info_api.py  shared_link_api.py
openapi_client/docs/: APIKeyApi.md  APIKeyCreateDto.md  AlbumApi.md  AlbumResponseDto.md  AllJobStatusResponseDto.md  AssetApi.md  AssetBulkUpdateDto.md  AssetFileUploadResponseDto.md  AssetIdsDto.md  AssetJobName.md  AssetResponseDto.md  AssetStatsResponseDto.md  AudioCodec.md  AuditApi.md  AuthDeviceResponseDto.md  AuthenticationApi.md  BulkIdResponseDto.md  ChangePasswordDto.md  CheckExistingAssetsDto.md  CheckExistingAssetsResponseDto.md  Colorspace.md  CreateAlbumDto.md  CreateUserDto.md  CuratedLocationsResponseDto.md  DeleteAssetResponseDto.md  EntityType.md  JobApi.md  JobCommand.md  JobCountsDto.md  JobName.md  JobSettingsDto.md  JobStatusDto.md  LibraryApi.md  LibraryResponseDto.md  LibraryStatsResponseDto.md  LoginResponseDto.md  MapMarkerResponseDto.md  MergePersonDto.md  OAuthApi.md  OAuthConfigDto.md  (+46 more)
openapi_client/models/: __init__.py  all_job_status_response_dto.py  api_key_create_dto.py  api_key_create_response_dto.py  api_key_response_dto.py  api_key_update_dto.py  asset_bulk_update_dto.py  asset_bulk_upload_check_result.py  asset_ids_response_dto.py  asset_job_name.py  (+56 more)
test/: test_im.py  test_integration.py
(+151 files in other folders)
