[tool.poetry]
name = "immich-albums"
version = "0.1.1"
description = ""
authors = ["Alessandro Vigano <alvistar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openapi_client = { path = "generated/openapi_client/"}
click = "^8.1.7"
pyyaml = "^6.0.1"

[tool.poetry.scripts]
im = "immich_albums.im:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
